# tail

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release_publish.yml
soundboar/: __init__.py  __main__.py  logs.py  requirements.txt
soundboar/app/: api.py  api_types.py  app.py  websocket.html
soundboar/cli/: __init__.py
soundboar/default_data/static/: index.html
soundboar/player/: Player.py  VLCPlayer.py  __init__.py
soundboar/repository/: Repository.py
soundboar/util/: CallbackToAsync.py  __init__.py  env.py  openapi.py
